# toyprogram

./: .gitignore  README  config.h  configure.ac
src/: Makefile.am  compile_flags.txt  main.c
